# cowardly-irregular

./: .gitignore  .gitmodules  .gutconfig.json  CLAUDE.md  README.md  export_presets.cfg  icon.svg.import  launch.sh  project.godot  pyproject.toml
.letta/: settings.local.json
data/: abilities.json  autobattle_rule_templates.json  autogrind_achievements.json  autogrind_rule_templates.json  bestiary.json  boss_dialogue.json  castle_harmonia_narrative.json  enemy_pools.json  equipment.json  examine_texts.json  inn_dialogue.json  items.json  job_aliases.json  job_personas.json  jobs.json  locations.json  lore.json  monsters.json  music_manifest.json  passives.json  sfx_manifest.json  shopkeeper_dialogue.json  sprite_manifest.json
docs/: ai_sprite_generation_pipeline.md  design-canon.md  job_evolutions_by_world.md  llm-integration-audit-response.md  llm-integration-audit.md  llm-integration-design.md  masterite_personalities.md  masterites.md  narrative_tree.md  personality_variants.md  project_summary.md  side_quests.md  story-bible.md  weapon-sprite-architecture.md
reports/: dev_2026-03-10.md  dev_2026-03-13.md  innovation_2026-03-08.md  innovation_2026-03-11.md  innovation_2026-03-13.md
scripts/: fetch-build.sh  run.sh  sync-and-test.sh
src/: GameLoop.gd  GameLoop.gd.uid  GameLoop.tscn
test/: README.md  run_single_test.gd  run_tests.gd
tools/: audit_broken_sprites.py  audit_npc_dialogue.py  battle_fuzz.gd  bob_static_idle.py  build_book.sh  build_overworld_aseprite.lua  check_for_new_artist_sprites.sh  check_npc_archetype_coverage.py  curate_style_dataset.py  (+70 more)
(+2860 files in other folders)
